// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser basic 1`] = `
Object {
  "composesCount": 0,
  "isStaticBlock": true,
  "styles": Object {
    ".thing": Object {
      "WebkitBoxPack": "center",
      "WebkitJustifyContent": "center",
      "display": Array [
        "-webkit-box",
        "-moz-box",
        "-ms-flexbox",
        "-webkit-flex",
        "flex",
      ],
      "justifyContent": "center",
      "width": "var(--css-hash-0)",
    },
  },
}
`;

exports[`parser fancy 1`] = `
Object {
  "composesCount": 0,
  "isStaticBlock": true,
  "styles": Object {
    ".some-selector": Object {
      "&::before": Object {
        "color": "blue",
        "content": "'pseudo'",
        "height": "20px",
        "width": "20px",
      },
      "&:hover": Object {
        "backgroundColor": "green",
      },
      "@media (max-width: 500px)": Object {
        "height": "var(--css-hash-1)",
        "position": "fixed",
      },
      "@media print": Object {
        "display": "none",
      },
      "WebkitBoxPack": "center",
      "WebkitJustifyContent": "center",
      "display": Array [
        "-webkit-box",
        "-moz-box",
        "-ms-flexbox",
        "-webkit-flex",
        "flex",
      ],
      "justifyContent": "center",
      "width": "var(--css-hash-0)",
    },
  },
}
`;

exports[`parser static 1`] = `
Object {
  "composesCount": 0,
  "isStaticBlock": true,
  "styles": Object {
    ".thing": Object {
      "display": "block",
      "height": "50px",
      "width": "30px",
    },
  },
}
`;
